# AOI_uploader

./: .gitignore  Cargo.toml  ICT_utils.rc  config.ini  database.sql
src/: main.rs  panel.rs
