[package]
name = "AOI_uploader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.3"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
tiberius = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tray-item = "0.10.0"
env_logger = "0"
log = "0"

roxmltree = "0.20.0"
rust-ini = "0.21.1"
